feat: starpoint handler (#11)
* feat: starpoint/program handler

* feat: get cummulative average and total points

* fix: only set ca and ta if not set yet

* chore: update swagger
