# internal/server/routes.go
@@ -63,6 +63,7 @@ func (s *Server) RegisterRoutes() http.Handler {
 			r.Get("/profile", s.ProfileHandler)
 			r.Get("/schedule", s.ScheduleHandler)
 			r.Get("/result", s.ResultHandler)
+			r.Get("/starpoint", s.StarpointHandler)
 			r.Get("/logout", s.LogoutHandler)
 
 			r.Route("/download", func(r chi.Router) {
